fixed header logo and title on small screens

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -54,15 +54,35 @@ header {
   // border-radius: 6px;
   width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  div {
+    display: flex;
+    align-items: center;
+
+    @media screen and (max-width: 425px) {
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
   h1 {
-    margin: 0 0 1rem;
+    margin: 1rem 0;
 
-    svg {
-      height: 4rem;
-      fill: currentColor;
-      margin: auto 1rem;
-      vertical-align: middle;
+    @media screen and (max-width: 576px) {
+      font-size: 2rem;
+    }
+  }
+  svg {
+    height: 4rem;
+    margin: auto;
+    fill: currentColor;
+    margin: auto 1rem;
+    vertical-align: middle;
+
+    @media screen and (max-width: 425px) {
+      height: 3rem;
     }
   }
 }
